# sudoku

./: .gitignore  CMakeLists.txt  README.md
share/: sudoku.desktop
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sudoku.cpp  sudoku.h
